# ws2tcp-local

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  build-docker-image.sh
.github/workflows/: docker-publish.yml  release.yml
crates/ws2tcp-local-ffi/: Cargo.toml
crates/ws2tcp-local-ffi/src/: lib.rs
crates/ws2tcp-local/src/: cli.rs  lib.rs  main.rs  settings.rs
examples/: custom-domains.txt  ws2tcp-local.toml
gui/qt/: CMakeLists.txt  README.md
src/: cli.rs  main.rs  routing_rules.rs  settings.rs  tunnel.rs
