[package]
name = "ws2tcp-local"
version = "0.1.0"
edition = "2024"
description = "Local HTTP proxy client for ws2tcp-router."
license = "MIT"
repository = "https://github.com/uglykitty/ws2tcp-local"
readme = "README.md"
keywords = ["proxy", "websocket", "tcp", "http"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt", "macros", "net", "io-util"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
