[package]
name = "ws2tcp-local"
version = "0.1.9"
edition = "2024"
description = "Local HTTP proxy client for ws2tcp-router."
license = "MIT"
repository = "https://github.com/uglykitty/ws2tcp-local"
readme = "README.md"
keywords = ["proxy", "websocket", "tcp", "http"]
categories = ["network-programming", "command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "README.zh-CN.md",
    "CHANGELOG.md",
    "src/**",
    "examples/**",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.45", features = ["rt", "macros", "signal"] }
tracing = "0.1"
ws2tcp-local-core = { version = "0.1.1", path = "../ws2tcp-local-core" }
